.metadata/.plugins/org.eclipse.cdt.ui/002_event_scheduler.build.log
20:11:51 **** Incremental Build of configuration Debug for project 002_event_scheduler ****
make -j12 all 
arm-none-eabi-gcc "../common/queue_user.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I"D:/tkhtn_final/002_event_scheduler/common" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"common/queue_user.d" -MT"common/queue_user.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "common/queue_user.o"
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I"D:/tkhtn_final/002_event_scheduler/common" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c:81:8: error: unknown type name 'EventQueue'
   81 | extern EventQueue event_queue;
      |        ^~~~~~~~~~
../Core/Src/main.c: In function 'HAL_TIM_PeriodElapsedCallback':
../Core/Src/main.c:94:17: warning: implicit declaration of function 'enqueue_event' [-Wimplicit-function-declaration]
   94 |                 enqueue_event(&event_queue, EVENT_UART3);
      |                 ^~~~~~~~~~~~~
../Core/Src/main.c:94:45: error: 'EVENT_UART3' undeclared (first use in this function)
   94 |                 enqueue_event(&event_queue, EVENT_UART3);
      |                                             ^~~~~~~~~~~
../Core/Src/main.c:94:45: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c: At top level:
../Core/Src/main.c:98:20: error: unknown type name 'EventType'
   98 | void process_event(EventType event) {
      |                    ^~~~~~~~~
../Core/Src/main.c:64:13: warning: 'MX_GPIO_Init' declared 'static' but never defined [-Wunused-function]
   64 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:65:13: warning: 'MX_I2C1_Init' declared 'static' but never defined [-Wunused-function]
   65 | static void MX_I2C1_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:66:13: warning: 'MX_USART1_UART_Init' declared 'static' but never defined [-Wunused-function]
   66 | static void MX_USART1_UART_Init(void);
      |             ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:67:13: warning: 'MX_I2C2_Init' declared 'static' but never defined [-Wunused-function]
   67 | static void MX_I2C2_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:68:13: warning: 'MX_I2C3_Init' declared 'static' but never defined [-Wunused-function]
   68 | static void MX_I2C3_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:69:13: warning: 'MX_TIM3_Init' declared 'static' but never defined [-Wunused-function]
   69 | static void MX_TIM3_Init(void);
      |             ^~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

20:11:53 Build Failed. 4 errors, 7 warnings. (took 1s.193ms)

